src/App.css
:root {
  --screen-width: 600px;
  --keyboard-height: 500px;
  --keyboard-width: 350px;
  --header-height: 65px;
  --primary-color: #393E46;
  --secondary-color: #222831;
}

.App {
  text-align: center;
  color: white;
}

body {
  padding: 0%;
  margin: 0;
  background-color: var(--primary-color);
  font-family: 'Montserrat', sans-serif;
}

img {
  width: 50px;
  height: 50px;
  padding: 7px;
 }


.popup {
  background-color: var(--secondary-color);
  color: white;
  padding: 20px 20px 3px 20px;
  display: block;
  text-align: center;
  border-radius: 15px;
}

.error {
  background-color: #EB4747;
  color: white;
  display: block;
  text-align: center;
  padding: 20px;
  border-radius: 15px;
}

.keyboard {
  width: 95vw;
  max-width: 500px;
  margin: 10px 5px 25px 10px;
}

.form {
  margin: auto;
  margin-top: 30px;
  margin-bottom: 30px;
  width: 250px;
  justify-content: center;
  padding: 20px;
  background-color: var(--secondary-color);
  border-radius: 15px;
}

nav {
  width: 100%;
  margin: 0px;
  border-bottom: 2px solid grey;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  height: var(--header-height)
}

nav h1 {
  margin: 10px 0px 0px 0px;
  color: white;
  place-items: center;

}

h1 {
  font-size: 40px;
  margin: 0px;
}

h2 {
  font-size: 30px;
  margin: 5px;
}

h3 {
  font-size: 20px;
  margin-top: -2px;
  font-weight: 100;
}

.loading-text {
  padding-top: 30vh;
  font-size: 20px;
}

.game {
  display: flex;
  align-items: center;
  padding-top: 20px;
  flex-direction: column;
}

.board {
  max-width: 370px;
  border: 1px solid black;
  display: flex;
  flex-direction: column;
  flex-grow: 1
}

.gameArea {
  height: 100%;
}

.row {
  flex: 33%;
  display: flex;
  flex-direction: row;
}

.letter {
  flex: 33%;
  height: 40px;
  width: 40px;
  border: 1px solid grey;
  margin: 4px;
  display: grid;
  place-items: center;
  font-size: 30px;
  font-weight: bolder;
  color: white;
  font-family: Arial, Helvetica, sans-serif;
}

#correct {
  background-color: #528d4e;
}

#almost {
  background-color: #b49f39;
}

#error {
  background-color: #2f2d2f;
}

.keyboard-line {
  flex: 33%;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.key {
  width: 50px;
  height: 50px;
  margin: 3px;
  border-radius: 7px;
  display: grid;
  place-items: center;
  font-size: 12px;
  background-color: grey;
  color: white;
  font-family: Arial, Helvetica, sans-serif;
  cursor: pointer;
}

#big {
  width: 100px;
}

#disabled {
  background-color: #2f2d2f;
}

.hyperLink {
  color: white;
  padding-bottom: 15px;
}

.submit {
  background-color: #00a2b2;
  color: #ffffff;
  margin: 20px;
  padding: 10px 30px 10px 30px;
  border-radius: 15px 15px 15px 15px;
}

.spacing {
  padding-top: 200px;
}

.gameOver {
  margin: 0px 5px 10px 5px;
}

.popup-body {
  padding-top: 20px;
}

.results-button {
  margin-bottom: 10px;
}

footer {
  position:absolute;
  right: 0;
  bottom: -30px;
  color: white;
}

.margin-top {
  margin-top: 20px;
}

.info-text {
  padding-top: 10px;
  font-size: 10pt;
}

#errorMessage {
  max-width: 300px;
}

.leaderboard-submit {
  display: flex;
  gap: 15px;
}

.table-container {
  background-color: lightgray;
  color: black;
  padding: 1rem;
  border-radius: 8px;
}

.table-container table {
  width: 100%;
  border-collapse: collapse;
}

.table-container th {
  font-weight: bold;
  text-align: center;
  padding: 10px;
}

.table-container td {
  text-align: center;
  padding: 10px;
}

.table-container th, .table-container td {
  border: 1px solid #ddd;
}

/* Set a fixed height and enable scrolling */
.table-scroll {
  max-height: calc(4 * 40px); /* Approximate row height */
  overflow-y: auto;
}

